# armature

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  mcp-registry.json  pyproject.toml  server.json  smithery.yaml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mcp-registry.yml  pages.yml  release.yml
data/: arena_tasks.yaml  industry_benchmarks.yaml  swebench_correlation.yaml
docs/: ARCHITECTURE.md  BENCHMARKING_DESIGN.md  CONTEXT_ENGINEERING.md  GITHUB_SETUP.md  HARNESS_ENGINEERING.md  IDE_INTEGRATION_GUIDE.md  INDEX.md  INSTALLATION.md  MULTI_PROVIDER_BUDGET.md  SELF_HEALING_PIPELINE.md  SPEC_DRIVEN_DEVELOPMENT_GUIDELINES.md  SPEC_FILE_STRUCTURE.md
docs/blog/: 2026-04-20-introducing-armature.md  _config.yml  index.md  linkedin-metrics-post.md  medium-article.md  social-media-posts.md
docs/blog/_includes/: custom-head.html  head-custom.html
docs/blog/_layouts/: default.html
docs/blog/assets/: generate_diagram.py  linkedin-metrics-diagram.html
docs/examples/: SAMPLE_PROJECT_REPORT.md
examples/: cross-project-budget-report.md  cross-project-test-report.md  estimated-vs-actual-cost-report.md
examples/armature-plugin-example/: README.md  armature_example_plugin.py  pyproject.toml
examples/monorepo/: armature.yaml
examples/monorepo/output/: budget-report-SPEC-2026-Q2-001.md  budget-report-SPEC-2026-Q2-002.md  budget-report-project.md
examples/monorepo/specs/: SPEC-2026-Q2-001.yaml  SPEC-2026-Q2-002.yaml
examples/python-fastapi/: armature.yaml
examples/python-fastapi/output/: budget-report-SPEC-2026-Q2-001.md  budget-report-SPEC-2026-Q2-002.md  budget-report-project.md
examples/python-fastapi/specs/: SPEC-2026-Q2-001.yaml  SPEC-2026-Q2-002.yaml
examples/typescript-nextjs/: armature.yaml
examples/typescript-nextjs/output/: budget-report-SPEC-2026-Q2-001.md  budget-report-SPEC-2026-Q2-002.md  budget-report-project.md
examples/typescript-nextjs/specs/: SPEC-2026-Q2-001.yaml  SPEC-2026-Q2-002.yaml
skills/: armature-budget.md  armature-check.md  armature-gc.md  armature-heal.md
src/: __init__.py
src/_internal/: subprocess_utils.py
src/architecture/: boundary.py
src/architecture/linters/: import_linter.py
src/armature/: __init__.py
src/armature/_internal/: ast_utils.py  output.py  types.py  validation.py
src/armature/architecture/: boundary.py  conformance.py
src/armature/benchmark/: __init__.py  arena.py  correlation.py  reporter.py  runner.py  scoring.py  tasks.py
src/armature/budget/: benchmark.py  cache.py  calibrator.py  optimizer.py  planner.py  reporter.py  router.py  tracker.py
src/armature/cli/: benchmark_cmd.py  budget_cmd.py  check_cmd.py  compat_cmd.py  heal_cmd.py  hooks_cmd.py  init_cmd.py  main.py  (+3 more)
src/budget/: budget.py  cache.py  calibrator.py  circuit.py  optimizer.py  tracker.py
src/cli/: baseline_cmd.py  gc_cmd.py  hooks_cmd.py  init_cmd.py  main.py  report_cmd.py
src/config/: loader.py  schema.py
src/gc/: baseline.py
src/harness/: pre_dev.py
src/heal/: pipeline.py
src/integrations/: claude_code.py  copilot.py  pre_commit.py
src/mcp/: server.py
src/quality/: post_write.py
tests/: conftest.py
tests/test_architecture/: test_boundary.py  test_conformance.py
tests/test_benchmark/: test_arena.py  test_correlation.py  test_reporter.py  test_runner.py  test_scoring.py  test_tasks.py
tests/test_budget/: test_benchmark.py  test_budget.py  test_cache.py  test_calibrator.py  test_circuit.py  test_reporter.py  test_router.py  test_tracker.py
tests/test_cli/: test_main.py
tests/test_config/: test_discovery.py  test_loader.py  test_schema.py
tests/test_e2e/: conftest.py  test_compare.py  test_converter.py  test_e2e_cli.py  test_spec_compare.py
tests/test_gc/: test_baseline.py  test_dead_code_agent.py  test_docs_agent.py  test_runner.py
tests/test_heal/: test_circuit_breaker.py
tests/test_integrations/: test_claude_code.py  test_cursor.py  test_github_checks.py
tests/test_internal/: test_ast_utils.py  test_subprocess_utils.py  test_types.py
tests/test_mcp/: test_server.py
tests/test_plugins/: test_plugin_registry.py
tests/test_quality/: test_gate.py  test_new_checks.py
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/src/: extension.ts
(+79 files in other folders)
