[project]
name = "armature-harness"
version = "0.2.1"
description = "Harness engineering framework for AI coding agents -- the invisible skeleton that shapes agent output"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Armature Contributors" },
]
keywords = ["ai", "coding-agent", "harness", "linting", "quality", "architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
python = ["ruff>=0.3.0", "mypy>=1.8.0", "pytest>=8.0.0", "radon>=6.0.0", "bandit>=1.7.0", "pip-audit>=2.7.0"]
typescript = []
all = ["armature-harness[python]", "armature-harness[typescript]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
armature = "armature.cli.main:cli"

[project.urls]
Homepage = "https://github.com/vivekgana/armature"
Repository = "https://github.com/vivekgana/armature"
Documentation = "https://github.com/vivekgana/armature#readme"
Changelog = "https://github.com/vivekgana/armature/blob/main/CHANGELOG.md"
Issues = "https://github.com/vivekgana/armature/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armature"]

[tool.hatch.build.targets.wheel.shared-data]
"data/industry_benchmarks.yaml" = "armature/data/industry_benchmarks.yaml"

[tool.hatch.build]
artifacts = ["data/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/armature --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
